<resources>
    <string name="app_name">DIU Question Bank</string>
    <string name="upload_question">Upload Question</string>
    <string name="department">Department</string>
    <string name="cse_111">CSE-111</string>
    <string name="course_code">Course Code</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="fall">Fall</string>
    <string name="semester">Semester</string>
    <string name="year">Year</string>
    <string name="pdf_file">PDF File</string>
    <string name="select_pdf">Select PDF</string>
    <string name="upload">Upload</string>
    <string name="exam">Exam</string>

    <string-array name="department_name">
        <item>Architecture</item>
        <item>Business Administration</item>
        <item>Business Studies</item>
        <item>Civil Engineering</item>
        <item>Computing and Information System</item>
        <item>Computer Science and Engineering</item>
        <item>Development Studies</item>
        <item>Electrical and Electronic Engineering</item>
        <item>Electronics and Telecommunication Engineering</item>
        <item>English</item>
        <item>Environmental Science and Disaster Management</item>
        <item>General Educational Development</item>
        <item>Information Science and Library Management</item>
        <item>Information Technology and Management</item>
        <item>Innovation and Entrepreneurship</item>
        <item>Journalism and Mass Communication</item>
        <item>Law</item>
        <item>Multimedia and Creative Technology</item>
        <item>Nutrition and Food Engineering</item>
        <item>Pharmacy</item>
        <item>Public Health</item>
        <item>Real Estate</item>
        <item>Software Engineering</item>
        <item>Textile Engineering</item>
        <item>Tourism and Hospitality Management</item>
    </string-array>

    <string-array name="exam_name">
        <item>Midterm</item>
        <item>Final</item>
    </string-array>

    <string-array name="cse">
        <item>ENG-101 Basic Functional English and English Spoken</item>
        <item>MAT-101 Mathematics-I</item>
        <item>PHY-101 Physics-I</item>
        <item>CSE-112 Computer Fundamentals</item>
        <item>CSE-113 Programming and Problem Solving</item>
        <item>CSE-114 Programming and Problem Solving Lab</item>
        <item>CSE-115 Introduction to Biology and Chemistry for Computation</item>
        <item>ENG-102 Writing and Comprehension</item>
        <item>MAT-102 Mathematics-II: Calculus, Complex Variables and Linear Algebra</item>
        <item>PHY-102 Physics-II</item>
        <item>PHY-103 Physics-II Lab</item>
        <item>CSE-121 Electrical Circuits</item>
        <item>CSE-122 Electrical Circuits Lab</item>
        <item>CSE-123 Data Structure</item>
        <item>CSE-124 Data Structure Lab</item>
        <item>MAT-211 Engineering Mathematics</item>
        <item>CSE-212 Discrete Mathematics</item>
        <item>CSE-213 Algorithms</item>
        <item>CSE-214 Algorithms Lab</item>
        <item>CSE-215 Electronic Devices and Circuits</item>
        <item>CSE-216 Electronic Devices and Circuits Lab</item>
        <item>BNS-101 Bangladesh Studies</item>
        <item>AOL-101 Art of Living</item>
        <item>CSE-221 Object Oriented Programming</item>
        <item>CSE-222 Object Oriented Programming Lab</item>
        <item>CSE-223 Digital Logic Design</item>
        <item>CSE-224 Digital Logic Design Lab</item>
        <item>CSE-225 Data Communication</item>
        <item>CSE-226 Numerical Methods</item>
        <item>CSE-227 Systems Analysis and Design</item>
        <item>CSE-228 Theory of Computation</item>
        <item>CSE-311 Database Management System</item>
        <item>CSE-312 Database Management System Lab</item>
        <item>CSE-313 Compiler Design</item>
        <item>CSE-314 Compiler Design Lab</item>
        <item>CSE-315 Software Engineering</item>
        <item>CSE-316 Artificial Intelligence</item>
        <item>CSE-317 Microprocessor and Microcontrollers</item>
        <item>STA-101 Statistics and Probability</item>
        <item>CSE-321 Computer Networks</item>
        <item>CSE-322 Computer Networks Lab</item>
        <item>CSE-323 Operating Systems</item>
        <item>CSE-324 Operating Systems Lab</item>
        <item>CSE-325 Instrumentation and Control</item>
        <item>CSE-326 Social and Professional Issues in Computing</item>
        <item>ACT-327 Financial and Managerial Accounting</item>
        <item>CSE-411 Computer Graphics</item>
        <item>CSE-412 Computer Graphics Lab</item>
        <item>CSE-413 Computer Architecture and Organization</item>
        <item>ECO-426 Engineering Economics</item>
        <item>CSE-446 Introduction to Bioinformatics</item>
        <item>CSE-446 Information Security</item>
        <item>CSE-426 Principles Of Robotics</item>
    </string-array>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="courses">Courses</string>
    <string name="ok">OK</string>
    <string name="nothing_n_found">Nothing \n Found</string>
    <string name="ops">Ops!</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="question">Question</string>
    <string name="notice">Notice</string>
    <string name="approved">Approved</string>
    <string name="reset">Reset</string>
    <string name="reset_npassword">Reset \nPassword</string>
    <string name="create_n_account">Create \nAccount</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log in</string>
    <string name="app_intro">A collection of all the department\'s previous exam questions for DIU students.</string>
    <string name="diu_question_bank">DIU Question Bank</string>
    <string name="department_of">Department of</string>
    <string name="reward">Reward</string>

    <string name="forgotten_password">Forgotten password?</string>
    <string name="by_signing_up_you_agree_to_our">By signing up, you agree to our</string>
    <string name="terms_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="uploads">Uploads</string>
    <string name="not_available">Not available&#8230;</string>
    <string name="not_verified">Your account is not verified. Please verify your email.</string>
    <string name="hi">Hi,</string>
    <string name="resend">Resend</string>
    <string name="course_code_ex_cse_111">Course Code (Ex: CSE-111)</string>
    <string name="uploaded">Uploaded</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="cancel">Cancel</string>
    <string name="_0">0</string>
    <string name="date">Date :</string>
    <string name="name_">Name :</string>
    <string name="info">Info</string>
    <string name="midterm">Midterm</string>
    <string name="final_exam">Final</string>
    <string name="your_earning">Your Earning</string>
    <string name="earn_point">Earn point</string>
    <string name="watch_video_and_earn_5_pints">Watch video and earn 5 pints</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_text">Please leave your suggestion and feedback for us to improve.</string>
    <string name="upload_pdf">Upload your question as a pdf file for your juniors.</string>
</resources>