<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp"
    android:outlineSpotShadowColor="@color/primary"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        >

        <TextView
            android:id="@+id/changePassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            style="@style/textColorPrimaryBlack"
            />
        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BackgroundUploadInput"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/current_password"
            android:textSize="@dimen/_10ssp"
            android:autofillHints="@string/current_password" />
        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BackgroundUploadInput"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/new_password"
            android:textSize="@dimen/_10ssp"
            android:autofillHints="@string/new_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            >

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="@dimen/_10ssp"
                android:padding="0dp"
                android:textStyle="bold"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="80"
                />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                >
                <Button
                    android:id="@+id/buttonChangePass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    style="@style/primaryColorButton"
                    android:text="@string/change"
                    android:textSize="@dimen/_10ssp"
                    android:padding="0dp"
                    android:textStyle="bold"
                    />
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>



