<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.QuestionUploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_5sdp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="2dp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white"
            />



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:text="@string/upload_question"
            app:layout_constraintBottom_toBottomOf="@id/imageBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageBack"
            app:layout_constraintTop_toTopOf="@id/imageBack"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/messageCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        >

        <TextView
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_pdf"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/_11ssp"
            android:padding="@dimen/_5sdp"
            />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        style="@style/BackGroundUpload"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageCard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/department"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            style="@style/textColorPrimaryBlack"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            style="@style/BackgroundUploadInput"
            android:orientation="vertical"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <Spinner
                android:id="@+id/department_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textSpinnerError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/_2sdp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/course_code"
            style="@style/textColorPrimaryBlack"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/courseCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:autofillHints="CSE-111"
            style="@style/BackgroundUploadInput"
            android:hint="@string/cse_111"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:inputType="textCapCharacters" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/semester"
            style="@style/textColorPrimaryBlack"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/semesterGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            style="@style/BackgroundUploadInput"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:weightSum="99">

            <RadioButton
                android:id="@+id/radioSpring"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:padding="@dimen/_5sdp"
                android:text="@string/spring"
                android:textSize="@dimen/_12sdp" />

            <RadioButton
                android:id="@+id/radioSummer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:padding="@dimen/_5sdp"
                android:text="@string/summer"
                android:textSize="@dimen/_12sdp" />

            <RadioButton
                android:id="@+id/radioFall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="33"
                android:padding="@dimen/_5sdp"
                android:text="@string/fall"
                android:textSize="@dimen/_12sdp" />


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/year"
                    style="@style/textColorPrimaryBlack"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    style="@style/BackgroundUploadInput"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <Spinner
                        android:id="@+id/year_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/exam"
                    style="@style/textColorPrimaryBlack"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    style="@style/BackgroundUploadInput"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <Spinner
                        android:id="@+id/exam_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/pdf_file"
            style="@style/textColorPrimaryBlack"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            style="@style/BackgroundUploadInput"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/selectPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/select_pdf"
                style="@style/textColorPrimary"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_upload"
                app:drawableTint="@color/primary" />

        </LinearLayout>

        <TextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_pdf"
            android:layout_marginTop="@dimen/_5sdp"
            app:drawableTint="@android:color/holo_red_dark"
            style="@style/textColorPrimary"
            android:textStyle="italic"
            android:textSize="@dimen/_8sdp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_gravity="start"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/upload"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>