<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.HelpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_5sdp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconBack"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="2dp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tint="@color/white"
            />



        <TextView
            android:id="@+id/titleHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:text="@string/help"
            app:layout_constraintBottom_toBottomOf="@id/iconBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconBack"
            app:layout_constraintTop_toTopOf="@id/iconBack"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        style="@style/BackGroundUpload"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_5sdp"
        >

        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/name"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            style="@style/BackgroundUploadInput"
            android:editable="false"
            />

        <EditText
            android:id="@+id/inputUserEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/email"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            style="@style/BackgroundUploadInput"
            android:editable="false"
            android:layout_margin="@dimen/_5sdp"
            />

        <EditText
            android:id="@+id/inputSubject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/subject"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            style="@style/BackgroundUploadInput"
            android:layout_margin="@dimen/_5sdp"
            />

        <EditText
            android:id="@+id/inputMessage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:hint="@string/message"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            style="@style/BackgroundUploadInput"
            android:layout_margin="@dimen/_5sdp"
            android:inputType="textMultiLine"
            android:gravity="start"
            />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/send"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12ssp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D0D1128"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
